--- a/package.json
+++ b/package.json
@@ -40,5 +40,12 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "vue": {
+    "devServer": {
+      "port": 8081,
+      "hot": true,
+      "open": true
+    }
+  }
 }
