--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "async-validator": "^4.0.7",
     "core-js": "^3.6.5",
     "sass-loader": "^10.1.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "vue": {
+    "devServer": {
+      "port": 8081,
+      "hot": true,
+      "open": true
+    }
   },
   "eslintConfig": {
     "root": true,
@@ -40,12 +49,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "vue": {
-    "devServer": {
-      "port": 8081,
-      "hot": true,
-      "open": true
-    }
-  }
+  ]
 }
