--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "async-validator": "^4.0.7",
     "core-js": "^3.6.5",
-    "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3"
   },
@@ -22,6 +21,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.11"
   },
   "vue": {
